@@ -4,9 +4,21 @@
 # - blog post :  http://www.packtpub.com/article/creating-time-series-charts-r
 # - chart.TimeSeries in xts?
 
+z <- ts(rnorm(30), start=c(1990,1), frequency=12)
+tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG")
+
+tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG",
+  YaxisR=TRUE, Yaxis.lab.rot = "horizontal")
+tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG",
+  YaxisL=FALSE,YaxisR=TRUE, Yaxis.lab.rot = "horizontal")
+
+tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG")
+tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG")
+
 z <- ts(rnorm(50), start=c(1990,1), frequency=12)
 tfplot(z, Xaxis=NULL,   xlab= "time, time, time", source="Source: RNG")
 tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG")
+tfplot(z, Xaxis="auto", xlab= "time, time, time", source="Source: RNG", start=c(1991,1))
 
 z <- ts(matrix(rnorm(80),40,2), start=c(1990,1), frequency=12)
 tfplot(z, Xaxis=NULL,   xlab= "time, time, time")
